fix(scss): change z-index value

--- a/src/Sass/Components/Skills.module.scss
+++ b/src/Sass/Components/Skills.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    z-index: -1;
+    z-index: 1;
 
     &__hero {
         background-image: url("../../assets/images/programming.jpg");
